add Arrow columnar processing